[gd_scene load_steps=7 format=3 uid="uid://bsuoo7nvlkoo1"]

[ext_resource type="Script" uid="uid://boyue4x5mflv8" path="res://src/main.gd" id="1_3cfgd"]
[ext_resource type="PackedScene" uid="uid://815k8dovw0hv" path="res://src/elements/car.tscn" id="1_eewff"]
[ext_resource type="PackedScene" uid="uid://dhjhppqv6qli6" path="res://src/elements/enemy.tscn" id="2_fyndt"]
[ext_resource type="PackedScene" uid="uid://c3cnxh8nbx6g0" path="res://src/elements/wall.tscn" id="2_gh0ne"]
[ext_resource type="PackedScene" uid="uid://dmf2qfbe5onmh" path="res://src/elements/asphalt.tscn" id="3_fyndt"]
[ext_resource type="Texture2D" uid="uid://c2cw0tp4jyg7l" path="res://assets/street_curb.png" id="5_kmhfv"]

[node name="Main" type="Node2D"]
script = ExtResource("1_3cfgd")
mob_scene = ExtResource("2_fyndt")

[node name="Asphalt" parent="." instance=ExtResource("3_fyndt")]
position = Vector2(468, 640)

[node name="Left_Wall" parent="." instance=ExtResource("2_gh0ne")]
position = Vector2(50, 642)

[node name="Sprite2D" type="Sprite2D" parent="Left_Wall"]
position = Vector2(46.5, 0)
scale = Vector2(0.35, 1)
texture = ExtResource("5_kmhfv")

[node name="Right_Wall" parent="." instance=ExtResource("2_gh0ne")]
position = Vector2(849, 639)

[node name="Sprite2D" type="Sprite2D" parent="Right_Wall"]
position = Vector2(-47, 1)
scale = Vector2(0.3, 1)
texture = ExtResource("5_kmhfv")

[node name="Player" parent="." instance=ExtResource("1_eewff")]
position = Vector2(430, 1144)

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="LeftMarker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(213, -67)

[node name="CenterMarker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(448, -67)

[node name="RightMarker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(675, -67)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.8
autostart = true

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
